data/derived/comb/progs/unify/prog3623.ml.out
Characters 33-53:
  List.map (( sepConcat "" ) l) l;;
           ^^^^^^^^^^^^^^^^^^^^
Error: This expression has type string but an expression was expected of type
         'a -> 'b
